--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
-        "nwidart/laravel-modules": "^10.0",
+        "nwidart/laravel-modules": "dev-master",
         "plank/laravel-mediable": "^5.9"
     },
     "require-dev": {
